--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
 				<script>
 					var typingAnimation = new Typed('#typing-animation', {
 						strings: ['Palash'],
-						typeSpeed: 70,
+						typeSpeed: 35,
 						backSpeed: 50,
-						startDelay: 2000,
+						startDelay: 1000,
 						backDelay: 2000,
 						loop: false,
 						cursorChar: '',
 						onComplete: function (self) {
 							var typingAnimationSubtitle = new Typed('#typing-animation-subtitle', {
 								strings: ['Transforming User Journeys into Profitable Conversions'],
-								typeSpeed: 55,
+								typeSpeed: 30,
 								backSpeed: 50,
 								startDelay: 0,
 								backDelay: 0000,
@@ -133,25 +133,25 @@
 										<article>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="image" target="_blank"><img src="images/pic037.jpg" alt="" /></a>
 											<h3 class="major">BathroomOutlet.ie</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>E-Commerce Management, UI/UX, Social Media</p>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="image" target="_blank"><img src="images/pic024.jpg" alt="" /></a>
 											<h3 class="major">TORQADORN</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>PPC, CRM, Conversion Rate Optimisation</p>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="image" target="_blank"><img src="images/pic017.jpg" alt="" /></a>
 											<h3 class="major">GEAR JEWELLERS DUBLIN</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>Website Content, Blogs, SEO, Email Marketing</p>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="image" target="_blank"><img src="images/pic019.jpg" alt="" /></a>
 											<h3 class="major">OTHER PROJECTS</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>Content creation, Layout building, Mockups</p>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="special" target="_blank">Learn more</a>
 										</article>
 									</section>
@@ -176,34 +176,40 @@
 										<td>2022 - Present</td>
 										<td>Digital Marketing Manager (E-Commerce)</td>
 										<td><a href="https://www.bathroomoutlet.ie/" target="_blank">BathroomOutlet.ie</a></td>
-										<td>Managed the launch of an ecommerce website and generated over 2,000 qualified leads for outbound sales within six months. Also personalized the customer experience through data analysis, executed successful paid acquisition strategies, and optimized user experience.</td>
+										<td>Managed the launch of an ecommerce website and generated over 2,000 qualified leads for outbound sales within six months. Also personalized the customer experience through data analysis, executed successful paid acquisition strategies, and optimized user experience. <br> 
+											<br>
+											Led the planning and execution of paid online marketing campaigns, managing a monthly budget of €20,000, optimising ad spend and ROI through effective targeting, bidding, and ad copy strategies. </td>
 									  </tr>
 									  <tr>
 										<td>2020 - 2022</td>
 										<td>Digital Marketing &amp; eCommerce Specialist</td>
 										<td>Gear Jewellers Dublin</td>
-										<td>Developed and executed a cutting-edge digital marketing campaign, spearheaded year-on-year revenue growth of 255% through various performance marketing initiatives. Deployed an AI-powered quiz to enhance the website's CRM capabilities, leveraging advanced data analytics to inform product recommendations and drive in-store appointments for higher ticket items. Successfully achieved #1 rankings on targeted keywords through On-Page and Technical SEO optimizations.</td>
+										<td>Developed and executed a cutting-edge digital marketing campaign, spearheaded year-on-year revenue growth of 255% through various performance marketing initiatives. <br>
+											<br>Deployed an AI-powered quiz to enhance the website's CRM capabilities, leveraging advanced data analytics to inform product recommendations and drive in-store appointments for higher ticket items. <br>
+											<br>Successfully achieved #1 rankings on targeted keywords through On-Page and Technical SEO optimizations.</td>
 									  </tr>
 									  <tr>
 										<td>2019 - 2023</td>
 										<td>Growth Consultant</td>
 										<td><a href="https://www.torqadorn.com/" target="_blank">TORQADORN</a></td>
-										<td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempora perferendis vero officia enim impedit voluptatem dignissimos, veniam ratione est alias rerum aperiam, nam aliquam reprehenderit iste dolor.</td>
+										<td>Focusing on increasing ecommerce sales through paid social ads, website optimizations, and introducing new features, while also defining a CRM strategy. <br>
+											<br>Analysing customer data to better understand the target audience, identifying the most effective social media platforms to advertise on, creating engaging ad content, and optimizing the website to improve user experience and boost conversions. <br>
+											<br>Developed a strong CRM strategy to retain customers and build long-term relationships with them, using targeted email marketing campaigns and other customer engagement tactics.</td>
 									  </tr>
 									  <tr>
 										<td>2017 - 2019</td>
 										<td>Marketing Manager</td>
 										<td>Startapp Global</td>
-										<td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi tempora perferendis vero officia enim impedit voluptatem dignissimos, veniam ratione est alias rerum aperiam, nam aliquam reprehenderit iste dolor.</td>
+										<td>Responsible for generating B2B leads via search ads, to drive customer acquisition. Liaised with clients of small and medium-sized businesses, understanding their needs and providing them with website and app solutions that meet their requirements. <br>
+											<br>Managing a team of eight sales executives, content writers, and UI/UX designers to ensure delivery of solutions on time and ensuring customer satisfaction. <br>
+											<br>Provide leadership and support, ensuring that my team members have the resources and tools they need to excel in their roles.</td>
 									  </tr>
 									</tbody>
 								  </table>
 								</div>
 							  </div>
 							</section>
-						</section>
-						
-				
+						</section>		
   <style>
   @media screen and (max-width: 480px) {
 	#experiences table td:first-child {
@@ -251,40 +257,34 @@
 							</div>
 						</section>
 				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
+				<section id="footer">
+					<div class="inner">
+					  <h2 class="major">Get in touch</h2>
+					  <form method="post" action="mailto:palash.arora@aiesec.net" onsubmit="buildEmailBody()">
+						<div class="fields">
+						  <div class="field">
+							<label for="name">Name</label>
+							<input type="text" name="name" id="name" />
+						  </div>
+						  <div class="field">
+							<label for="email">Email</label>
+							<input type="email" name="email" id="email" />
+						  </div>
+						  <div class="field">
+							<label for="message">Message</label>
+							<textarea name="message" id="message" rows="4"></textarea>
+						  </div>
+						</div>
+						<ul class="actions">
+						  <li><input type="submit" value="Send Message" /></li>
+						</ul>
+						</form>
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+									Dublin , Ireland<br />
+									</li>
+								<li class="icon solid fa-phone">+353 899630002</li>
+								<li class="icon solid fa-envelope"><a href="#">palash.arora@aiesec.net</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
