--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 										</article>
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="special" target="_blank" class="button">Browse All</a></li>
 									</ul>
 								</div>
 							<div class="inner">
