--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 								<li class="icon solid fa-envelope"><a href="#">palash.arora@aiesec.net</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								</li><li>Designed by: <a href="https://www.linkedin.com/in/palasharora/">Palash Arora</a></li>
 							</ul>
 						</div>
 					</section>
