--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						  cursorChar: '',
 						  onComplete: function (self) {
 							var typingAnimation2 = new Typed('#typing-animation2', {
-							  strings: ['Using AI for cutting-edge, data-driven campaigns that win.', 'Creating bespoke digital experiences that captivate your audience.', 'Crafting innovative solutions that drive business growth.'],
+							  strings: ['Leveraging Artifical Intelligence for cutting-edge, data-driven campaigns that win.', 'Creating bespoke digital experiences that captivate your audience.', 'Crafting innovative solutions that drive business growth.'],
 							  typeSpeed: 50,
 							  backSpeed: 50,
 							  startDelay: 1000,
