--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1fF5/xD7g2Q4TXjTmGmUq6/apy7VfFSd6U5p6RV" crossorigin="anonymous">
 	</head>
 	<body class="is-preload">
 
@@ -136,19 +137,34 @@
 									<section class="features">
 										<article>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="image" target="_blank"><img src="images/pic037.jpg" alt="" /></a>
-											<h3 class="major">BathroomOutlet.ie</h3>
+											<h3 class="major">
+												BathroomOutlet.ie 
+												<a href="https://bathroomoutlet.ie" target="_blank" style="margin-left: 5px;" >
+													<i class="fas fa-external-link-alt"></i>
+												</a>
+												</h3>
 											<p>E-Commerce Management, UI/UX, Social Media</p>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="image" target="_blank"><img src="images/pic024.jpg" alt="" /></a>
-											<h3 class="major">TORQADORN</h3>
+											<h3 class="major">
+												TORQADORN 
+												<a href="https://torqadorn.com" target="_blank" style="margin-left: 5px;" >
+													<i class="fas fa-external-link-alt"></i>
+												</a>
+												</h3>
 											<p>PPC, CRM, Conversion Rate Optimisation</p>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="image" target="_blank"><img src="images/pic017.jpg" alt="" /></a>
-											<h3 class="major">GEAR JEWELLERS DUBLIN</h3>
+											<h3 class="major">
+												Gear Jewellers 
+												<a href="https://gearjewellers.ie" target="_blank" style="margin-left: 5px;" >
+													<i class="fas fa-external-link-alt"></i>
+												</a>
+												</h3>
 											<p>Website Content, Blogs, SEO, Email Marketing</p>
 											<a href="https://drive.google.com/drive/folders/13VZ9QOWGNnM4msR2oryJ5h0q9HmnfIHd" class="special" target="_blank">Learn more</a>
 										</article>
